deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coop
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: coop
  template:
    metadata:
      labels:
        app: coop
    spec:
      containers:
        - name: coop
          image: jinh9015/coop:13
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
