service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coop-svc
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/"
spec:
  selector:
    app: coop
  type: NodePort
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
